plugins {
    id 'org.springframework.boot' version '2.6.7'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
    id 'java'
    id 'groovy'
    id 'application'
    id 'com.adarshr.test-logger' version '3.2.0'
}

group = 'com.chokealot'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.mapstruct:mapstruct:1.4.2.Final'
    implementation 'org.liquibase:liquibase-core:4.8.0'
    implementation group: 'org.json', name: 'json', version: '20211205'
    implementation group: 'com.amazonaws.secretsmanager', name: 'aws-secretsmanager-caching-java', version: '1.0.1'
    implementation 'com.google.code.findbugs:jsr305:3.0.2'

// https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-dynamodb
    implementation group: 'com.amazonaws', name: 'aws-java-sdk-dynamodb', version: '1.12.197'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation "org.spockframework:spock-core:2.2-M1-groovy-3.0"
    testImplementation group: 'org.spockframework', name: 'spock-spring', version: '2.2-M1-groovy-3.0'
    testImplementation "org.testcontainers:spock:1.16.3"
    testImplementation "org.testcontainers:mysql:1.16.3"
    testImplementation group: 'io.rest-assured', name: 'rest-assured', version: '4.5.1'
    testImplementation "io.rest-assured:rest-assured:4.5.1"
    testImplementation "io.rest-assured:json-path:4.5.1"
    testImplementation "io.rest-assured:xml-path:4.5.1"
    testImplementation "io.rest-assured:json-schema-validator:4.5.1"

    annotationProcessor 'org.projectlombok:lombok:1.18.22'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.4.2.Final'

    testAnnotationProcessor 'org.projectlombok:lombok:1.18.22'

    testCompileOnly 'org.projectlombok:lombok:1.18.22'

    compileOnly 'org.projectlombok:lombok:1.18.22'

    runtimeOnly 'mysql:mysql-connector-java'
}

tasks.withType(Test) {
    useJUnitPlatform()
    jvmArgs '--enable-preview'
}

bootRun {
    classpath = sourceSets.test.runtimeClasspath
}

test {
    classpath = sourceSets.test.runtimeClasspath
    useJUnitPlatform()
}